crates/spelldawn/tests/it/core/snapshots/it__rules__raid_tests__fire_combat_ability.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 285
expression: "Summary::summarize(&response)"
---

command_list: 
    FireProjectile: 
        source_id: O44
        target_id: Identity(User)
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: VaultSanctumCryptsRoomA
        current_priority: User
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: C1
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 6
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 4
                position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
channel_response: 
    FireProjectile: 
        source_id: O44
        target_id: Identity(Opponent)
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: VaultSanctumCryptsRoomA
        current_priority: Opponent
        raid_active: false
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 4
                position: ObjectPositionRoom { room_id: RoomA, room_location: Front }
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: RoomA, room_location: Back }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: Opponent }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
