crates/spelldawn/tests/it/core/snapshots/it__rules__raid_tests__raid_two_defenders.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 583
expression: "Summary::summarize(&response)"

---

command_list: 
    FireProjectile: 
        source_id: C45
        target_id: O44
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        user: 
            side: Champion
            mana: 995
        current_priority: User
        raid_active: true
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 4
                position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 2
                position: ObjectPositionRaid
    RenderInterface: 
    panels: 
        main_controls: 
            node: 
                text: "Continue?"
                text: "Advance"
                text: "Retreat"
        card_anchor_nodes: 
channel_response: 
    FireProjectile: 
        source_id: C45
        target_id: O44
        projectile: "<ProjectileAddress>"
        travel_duration: 300
        wait_duration: 300
    UpdateGameView: 
        opponent: 
            side: Champion
            mana: 995
        current_priority: Opponent
        raid_active: true
    RunInParallel: 
        MoveGameObjects: 
            id: O44
            position: 
                sorting_key: 4
                position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 2
                position: ObjectPositionRaid
