crates/spelldawn/tests/it/core/snapshots/it__rules__raid_tests__raid_two_defenders_retreat.snap
---
source: crates/spelldawn/tests/it/rules/raid_tests.rs
assertion_line: 641
expression: "Summary::summarize(&response)"
---

command_list: 
    UpdateGameView: 
        user: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: VaultSanctumCrypts
        current_priority: User
        raid_active: false
    CreateOrUpdateCard: 
        card: 
            card_id: C1
            revealed_to_viewer: true
            is_face_up: false
            owning_player: User
            revealed_card: 
                targeting: 
                    can_play: true
        create_position: 
            sorting_key: 6
            position: ObjectPositionHand { owner: User }
        create_animation: Unspecified
    RunInParallel: 
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        MoveGameObjects: 
            id: Identity(User)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: User }
        MoveGameObjects: 
            id: Deck(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionDeckContainer { owner: Opponent }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
channel_response: 
    UpdateGameView: 
        opponent: 
            side: Champion
            player_info: 
            valid_rooms_to_visit: VaultSanctumCrypts
        current_priority: Opponent
        raid_active: false
    RunInParallel: 
        MoveGameObjects: 
            id: O45
            position: 
                sorting_key: 2
                position: ObjectPositionRoom { room_id: Vault, room_location: Front }
        MoveGameObjects: 
            id: Identity(Opponent)
            position: 
                sorting_key: 0
                position: ObjectPositionIdentityContainer { owner: Opponent }
        MoveGameObjects: 
            id: Deck(User)
            position: 
                sorting_key: 0
                position: ObjectPositionDeckContainer { owner: User }
    RenderInterface: 
    panels: 
        main_controls: 
        card_anchor_nodes: 
